--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <nav>
     <div class="left-side">
       <div class="logo-wrapper">
-        <img class="logo" src="images/Logo.webp" alt="">
+        <img class="logo" src="images/logowhite.webp" alt="">
       </div>
     </div>
 
@@ -125,7 +125,7 @@
     </div>
   </div>
 
-  <audio controls autoplay id="Audio">
+  <audio  id="Audio">
     <source src="audio/open-fields-aaron-paul-low-main-version-25198-02-16.mp3" type="audio/mp3">
     Your browser does not support the audio element.
   </audio>
