--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </div>
   </div>
 
-  <audio  id="Audio">
+  <audio autoplay id="Audio">
     <source src="audio/open-fields-aaron-paul-low-main-version-25198-02-16.mp3" type="audio/mp3">
     Your browser does not support the audio element.
   </audio>
